fix scrollbar and stage

--- a/src/sass/archiv.scss
+++ b/src/sass/archiv.scss
@@ -71,7 +71,6 @@
   &__date {
     border-bottom: 1px solid #9f8655;
     &:last-child {
-      margin-bottom: 5vh;
       border-bottom: 0;
     }
   }
